k8s/kustomize/deployment/base/octopetshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: octopetshop-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  octopetshop-web-cluster-ip-service
            port:
              name: http-port
